# Philosophers

./: README.md
philo_one/: CMakeLists.txt  Makefile
philo_one/includes/: libft.h  philo_one.h
philo_one/srcs/: main.c
philo_one/srcs/destroy/: destroy.c
philo_one/srcs/initialization/: config_initialization.c  philosophers_initialization.c  simulation_initialization.c
philo_one/srcs/philosophers/: philosophers_live.c  philosophers_threads.c
philo_one/srcs/simulation/: simulation.c
philo_one/srcs/utils/: initialization_utils.c  libft.c  utils.c
philo_three/: CMakeLists.txt  Makefile
philo_three/includes/: philo.h  philo_one.h
philo_three/srcs/: main.c
philo_three/srcs/destroy/: destroy.c
philo_three/srcs/initialization/: config_initialization.c  philosophers_initialization.c  simulation_initialization.c
philo_three/srcs/philosophers/: philosopher_supervisor.c  philosopher_supervisor_check.c  philosophers_live.c  philosophers_processes.c
philo_three/srcs/simulation/: simulation.c
philo_three/srcs/utils/: utils.c
philo_two/: CMakeLists.txt  Makefile  philo_one
philo_two/includes/: philo.h  philo_one.h
philo_two/srcs/: main.c
philo_two/srcs/destroy/: destroy.c
philo_two/srcs/initialization/: config_initialization.c  philosophers_initialization.c  simulation_initialization.c
philo_two/srcs/philosophers/: philosophers_live.c  philosophers_threads.c
philo_two/srcs/simulation/: simulation.c
philo_two/srcs/utils/: libft.c  utils.c
